--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id 'maven-publish'
 }
 
 group = 'com.project'
@@ -9,6 +10,18 @@ version = '0.0.1-SNAPSHOT'
 
 java {
 	sourceCompatibility = '17'
+}
+
+publishing {
+	publications {
+		maven(MavenPublication) {
+			groupId 'com.project'
+			artifactId 'drools'
+			version '0.0.1-SNAPSHOT'
+
+			from components.java
+		}
+	}
 }
 
 configurations {
@@ -31,7 +44,7 @@ dependencies {
 //	implementation "org.kie:kie-spring:${droolsVersion}"
 	implementation "org.drools:drools-core:${droolsVersion}"
 	implementation "org.drools:drools-decisiontables:${droolsVersion}"
-//	implementation "org.kie:kie-ci:${droolsVersion}"
+	implementation "org.kie:kie-ci:${droolsVersion}"
 
 	compileOnly 'org.projectlombok:lombok'
 
